[package]
name = "wgpu_canvas"
version = "0.1.0"
license = "ISC"
edition = "2021"
exclude = ["index.node"]

[lib]
name = "wgpu_canvas"
path = "src/lib.rs"
crate-type = ["cdylib", "lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
once_cell = "1.19.0"
pollster = "0.3.0"
winit = { version="0.29.10", features = ["serde", "rwh_05"] }
vello = { git = "https://github.com/linebender/vello/", features = ["buffer_labels", "wgpu-profiler","hot_reload"] ,rev = "e04b6028651dfd6b87067c0d27c1207c7f735a6d" }
css-color = "0.2.8"
image = "0.25.0"
wgpu-profiler = "0.15.0"
wgpu = "0.18.0"
rayon = "1.9.0"
crossbeam = "0.8.4"
instant = "0.1.12"
futures = "0.3.30"
bytemuck = "1.15.0"
lazy_static = "1.4.0"
smallvec = "1.13.1"

[dependencies.neon]
version = "1.0.0"
